2007-08-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-takeValuesFromRequest:_rqinContext:_ctx]): save the category
	selected in the dialog.
	([UIxComponentEditor -setComponent:newComponent]): retrieve the
	first category, if ever, of the calendar entity.

	* UI/MailerUI/UIxMailMainFrame.m ([UIxMailMainFrame
	-composeAction]): restored method since it is needed by the
	address book.

	* UI/MailerUI/UIxMailAccountActions.m ([UIxMailAccountActions
	-composeAction]): the address fields should be arrays and not
	simple strings.

	* UI/Common/UIxPageFrame.m ([UIxPageFrame -buildDate]): new method
	that returns the build date of SOGo in the template.

2007-08-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Contacts/SOGoContactGCSFolder.m ([SOGoContactGCSFolder
	-_flattenedRecords:records]): when the c_cn field is empty,
	returns set a formatted string with the concatenation of
	c_givenname and c_sn as the displayName.

	* SoObjects/Mailer/SOGoMailAccounts.m ([SOGoMailAccounts
	-isValidMailAccountName:_key]): prevent unknown accounts from
	being accessed.

	* UI/MailPartViewers/UIxMailPartViewer.m ([UIxMailPartViewer
	-pathToAttachmentObject]): we no longer need the filename
	extension for SoLookup...

	* SoObjects/Mailer/SOGoMailBodyPart.m ([SOGoMailBodyPart
	-lookupName:_keyinContext:_ctxacquire:_flag]): do not require the
	filename to have an extension, and thus accept any filename.

	* UI/Contacts/UIxContactsListView.m ([UIxContactsListView
	-currentCName]): new method that returns the c_name of the
	contact, correctly escaped to be passed by url afterwards.

	* UI/MailPartViewers/UIxMailPartHTMLViewer.m
	([UIxMailPartHTMLViewer -flatContentAsString]): pass the NSData
	instance of [self decodedFlatContent] instead of the buggy
	NSString from [super flatContentAsString] to the parser.

2007-08-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
